# textminer-rs

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/handlers/: mod.rs
src/middleware/: validation.rs
src/models/: mod.rs
src/utils/: mod.rs
static/: index.html
